package br.unitins.topicos1.dto;

public record ItemPedidoDTO(
    Long idProduto,
    Integer quantidade
) {
    
}
