@startuml ecommerce
class Pessoa{
  - nome: String
  - email: String
  - sexo: Sexo
  - telefone : Telefone
  - aniversario: LocalDate
  - cpf: String
  - username : String
  - senha : String
}

class Funcionario{
  - cargo: String 
  - pessoa : Pessoa
}

class Cliente{
  - pessoa : Pessoa
}


Enum Sexo{
  + FEMININO: int
  + MASCULINO: int
}


class Fornecedor{
  - idFornecedor: Long
  - nome: String
  - email: String
  - endereco: String 
  - telefone : Telefone
  - cnpj: String
}

class Produto{
  - nomeProduto: String
  - preco: Double
  - material: String
  - dimensoes: String
  - marca: Marca
  - fornecedor : Fornecedor
}

class Camera{
  - id: Long
  - conectividade: String
  - resolucao: String
  - telaArticulavel: Boolean
  - telaSensivelToque: Boolean
  - tipoTela: String
  - iso: String
  - flashPopUp: Boolean
  - garantia: Integer
  - nomeImagem : String
}

class Marca{
  - idMarca: Long
  - nome: String
}

class Lente{
  - id: String
  - distanciaFocal: Integer
  - compatibilidade: String
  - diametroFiltro: Integer
  - montagem: String
  - nomeImagem : String
}

class Telefone{
  - codigoArea: String
  - numero: String
}

enum FormaPagamento{
  + PIX : int
  + DEBITO : int
  + CREDITO : int
  + BOLETO : int
  - FormaPagamento(int id, String pagamento)
}

enum StatusPedido {
    + CONCLUIDO: int
    + CANCELADO: int
    + ENVIADO: int
    + PAGAMENTO_PENDENTE: int
    + PAGO: int
}

class Cartao{
  - nome : String
  - numero : String
  - pessoa : Pessoa
  - dataValidade : LocalDate
  - cvc : int
}

class ItemPedido{
  - preco : Double
  - desconto : Double
  - quantidade : Integer
  - venda : Venda
}

class Pedido{
  - data : LocalDateTime
  - total : Double
  - cliente : Cliente
  - listaItens : List<ItemPedido>
  - FormaPagamento : FormaPagamento
  - dataPrevista : LocalDate
  - dataChegada : LocalDate
  - pago : Boolean
}

Produto "1" <-right- "*" ItemPedido

Pedido "1" --> "*" ItemPedido
Pedido "*" -up-> "1" Cliente 
Cartao "*" --> "1" Pessoa
Pessoa "1" -left-> "1" Telefone
Pessoa "1" <-left- "1" Funcionario
Pessoa "1" <-- "1" Cliente
Pessoa "1" -right-> "1" Sexo

Marca "1" <-right-* "*" Produto

Fornecedor "1" -up-> "1" Telefone
Produto "*" o-up-> "1" Fornecedor
Produto <|-- Camera
Produto <|-- Lente

Pedido "1" --> "1" StatusPedido
Pedido "1" --> "1" FormaPagamento
@enduml